--- a/style.css
+++ b/style.css
@@ -93,6 +93,7 @@
     margin-bottom: 10px;
     border-radius: 20px;
     display: none;
+    text-transform: capitalize;
 }
 
 /* Remove panel animation */
