--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@
 .alert{
     width: 100vw;
     background: rgba(0, 100, 40, 0.7);
+    color:white;
 }
 
 /* styling for the player entry fields */
@@ -94,6 +95,15 @@
     border-radius: 20px;
     display: none;
     text-transform: capitalize;
+}
+
+.high_score{
+    padding:10px;
+    background-color: rgba(255, 255, 255, 0.7);
+    width:70vw;
+    margin: auto;
+    font-weight: 700;
+    border: solid #222222 2px;
 }
 
 .rolling{
