--- a/style.css
+++ b/style.css
@@ -103,6 +103,7 @@
     background-color: rgba(255, 255, 255, 0.7);
     width:70vw;
     margin: auto;
+    margin-bottom: 2vh;
     font-weight: 700;
     border: solid #222222 2px;
 }
@@ -111,9 +112,15 @@
     display: none;
 }
 .dart_out{
+    display:flex;
     visibility: hidden;
     background-color: rgba(255, 255, 255, 0.7);
     padding: 5px;
+}
+#darts{
+    width:20vh;
+    height: 4vh;
+    margin-right: 10px;
 }
 
 /* Remove panel animation */
