:lipstick: Improved UI :lipstick:

--- a/style.css
+++ b/style.css
@@ -8,9 +8,7 @@
 /* styling of the body */
 .contain{
     margin: 0;
-    background: #11998e;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #38ef7d, #11998e);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #38ef7d, #11998e); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #0a642d;
     object-fit: contain;
     height:100vh;
     position: absolute;
@@ -32,7 +30,7 @@
 /* Set the psuedo nav width */
 .alert{
     width: 100vw;
-    background: rgba(0, 100, 40, 0.7);
+    background: rgba(255, 0, 34, 0.9);
     color:white;
 }
 
@@ -45,7 +43,7 @@
 /* Table styling */
 .playernames{
     font-weight: 700;
-    width: 80vw;
+    width: 100vw;
     margin:auto;
 }
 
@@ -64,7 +62,7 @@
 
 /* Score inputs styling */
 .score_updates{
-    width: 80vw;
+    width: 100vw;
     margin: auto;
     background-color: rgba(255, 255, 255, 0.7);
 }
@@ -77,7 +75,7 @@
 .score_updates div{
     font-weight: 700;
     padding:10px;
-    margin: 5px;
+    margin:1px;
     border: 1px solid grey;
     background-color: rgba(255, 255, 255, 0.8);
 }
