--- a/assets/style.css
+++ b/assets/style.css
@@ -116,6 +116,8 @@
     visibility: hidden;
     background-color: rgba(255, 255, 255, 0.7);
     padding: 5px;
+    margin: auto;
+    max-width: 400px;
 }
 #darts{
     width:20vh;
@@ -138,7 +140,6 @@
 @media only screen and (min-width: 1000px){
     .score_updates div{
         text-align: right;
-        transform: scale(1.5);
         margin:20px;
         margin-right: 230px;
     }
