--- a/assets/style.css
+++ b/assets/style.css
@@ -21,7 +21,7 @@
     left:50%;
     transform: translate(-50%, -50%);
     background: whitesmoke;
-    width:100vh;
+    width:100vw;
     padding:40px;
     border: 1px solid gray;
 }
